# cmd/mail/main.go
@@ -3,6 +3,8 @@ package main
 import (
 	"fmt"
 	"github.com/rs/cors"
+	httpSwagger "github.com/swaggo/http-swagger/v2"
+	"mail/pkg/delivery/middleware"
 	"mail/pkg/delivery/session"
 	"net/http"
 
@@ -14,7 +16,6 @@ import (
 	userUc "mail/pkg/usecase/user"
 
 	"github.com/gorilla/mux"
-	httpSwagger "github.com/swaggo/http-swagger/v2"
 	_ "mail/docs"
 )
 
@@ -26,6 +27,7 @@ import (
 // @BasePath /
 func main() {
 	sessionsManager := session.NewSessionsManager()
+	session.InitializationGlobalSeaaionManager(sessionsManager)
 
 	emailRepository := emailRepo.NewEmailMemoryRepository()
 	emailUseCase := emailUc.NewEmailUseCase(emailRepository)
@@ -37,14 +39,36 @@ func main() {
 		EmailUseCase: emailUseCase,
 		Sessions:     sessionsManager,
 	}
+	//emailHand.InitializationEmailHandler(emailHandler)		// !!!
 
 	userHandler := &userHand.UserHandler{
 		UserUseCase: userUseCase,
 		Sessions:    sessionsManager,
 	}
+	//userHand.InitializationEmailHandler(userHandler)			// !!!
 
 	router := mux.NewRouter()
-	router.HandleFunc("/api/v1/emails", emailHandler.List).Methods("GET", "OPTIONS")
+
+	auth := mux.NewRouter().PathPrefix("/api/v1/auth").Subrouter()
+	auth.Use(middleware.AuthMiddleware)
+	router.PathPrefix("/api/v1/auth").Handler(auth)
+
+	auth.HandleFunc("/verify-auth", userHandler.VerifyAuth).Methods("GET", "OPTIONS")
+	auth.HandleFunc("/get-user", userHandler.GetUserBySession).Methods("GET", "OPTIONS") //??
+
+	auth.HandleFunc("/emails", emailHandler.List).Methods("GET", "OPTIONS")
+	auth.HandleFunc("/email/{id}", emailHandler.GetByID).Methods("GET", "OPTIONS")
+	auth.HandleFunc("/email/add", emailHandler.Add).Methods("POST", "OPTIONS")
+	auth.HandleFunc("/email/update/{id}", emailHandler.Update).Methods("PUT", "OPTIONS")
+	auth.HandleFunc("/email/delete/{id}", emailHandler.Delete).Methods("DELETE", "OPTIONS")
+
+	router.HandleFunc("/api/v1/login", userHandler.Login).Methods("POST", "OPTIONS")
+	router.HandleFunc("/api/v1/signup", userHandler.Signup).Methods("POST", "OPTIONS")
+	router.HandleFunc("/api/v1/logout", userHandler.Logout).Methods("POST", "OPTIONS")
+
+	router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
+
+	/*router.HandleFunc("/api/v1/emails", emailHandler.List).Methods("GET", "OPTIONS")
 	router.HandleFunc("/api/v1/email/{id}", emailHandler.GetByID).Methods("GET", "OPTIONS")
 	router.HandleFunc("/api/v1/email/add", emailHandler.Add).Methods("POST", "OPTIONS")
 	router.HandleFunc("/api/v1/email/update/{id}", emailHandler.Update).Methods("PUT", "OPTIONS")
@@ -54,9 +78,7 @@ func main() {
 	router.HandleFunc("/api/v1/login", userHandler.Login).Methods("POST", "OPTIONS")
 	router.HandleFunc("/api/v1/signup", userHandler.Signup).Methods("POST", "OPTIONS")
 	router.HandleFunc("/api/v1/logout", userHandler.Logout).Methods("POST", "OPTIONS")
-	router.HandleFunc("/api/v1/get-user", userHandler.GetUserBySession).Methods("GET", "OPTIONS")
-
-	router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
+	router.HandleFunc("/api/v1/get-user", userHandler.GetUserBySession).Methods("GET", "OPTIONS")*/
 
 	c := cors.New(cors.Options{
 		AllowedOrigins:   []string{"http://127.0.0.1:8081", "http://89.208.223.140:8081", "http://localhost:8080", "http://localhost:8081", "http://89.208.223.140:8080"},
