# docs/swagger.yaml
@@ -1,19 +1,69 @@
 basePath: /
 definitions:
-  delivery.Email:
+  email.Email:
+    properties:
+      dateOfDispatch:
+        description: Date when the email was sent.
+        type: string
+      deleted:
+        description: Status indicating whether the email has been deleted.
+        type: boolean
+      draftStatus:
+        description: Status indicating that the email is a draft.
+        type: boolean
+      id:
+        description: Unique identifier of the email in the database.
+        type: integer
+      mark:
+        description: A flag, for example, marking the email as a favorite.
+        type: string
+      photoId:
+        description: Link to the photo attached to the email, if any.
+        type: string
+      readStatus:
+        description: Status indicating whether the email has been read.
+        type: boolean
+      replyToEmailId:
+        description: ID of the email to which a reply can be sent.
+        type: integer
+      text:
+        description: Text body of the email.
+        type: string
+      topic:
+        description: Subject of the email.
+        type: string
     type: object
-  delivery.ErrorResponse:
+  handlers.ErrorResponse:
     properties:
       error:
         type: string
     type: object
-  delivery.Response:
+  handlers.Response:
     properties:
       body: {}
       status:
         type: integer
     type: object
-  delivery.User:
+  user.User:
+    properties:
+      avatar:
+        description: User's avatar.
+        type: string
+      id:
+        description: Unique identifier of the user.
+        type: integer
+      login:
+        description: User's login.
+        type: string
+      name:
+        description: User's first name.
+        type: string
+      password:
+        description: User's password.
+        type: string
+      surname:
+        description: User's last name.
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -22,269 +72,269 @@ info:
   title: API Mail
   version: "1.0"
 paths:
-  /api/v1/email/{id}:
+  /api/v1/auth/email/{id}:
     get:
       description: Get an email message by its unique identifier
       parameters:
-      - description: ID of the email message
-        in: path
-        name: id
-        required: true
-        type: integer
+        - description: ID of the email message
+          in: path
+          name: id
+          required: true
+          type: integer
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Email message data
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Bad id in request
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "404":
           description: Email not found
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: Get an email message by ID
-  /api/v1/email/add:
+  /api/v1/auth/email/add:
     post:
       consumes:
-      - application/json
+        - application/json
       description: Add a new email message to the system
       parameters:
-      - description: Email message in JSON format
-        in: body
-        name: email
-        required: true
-        schema:
-          $ref: '#/definitions/delivery.Email'
+        - description: Email message in JSON format
+          in: body
+          name: email
+          required: true
+          schema:
+            $ref: '#/definitions/email.Email'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: ID of the added email message
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Bad JSON in request
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "500":
           description: Failed to add email message
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: Add a new email message
-  /api/v1/email/delete/{id}:
+  /api/v1/auth/email/delete/{id}:
     delete:
       description: Delete an email message based on its identifier
       parameters:
-      - description: ID of the email message
-        in: path
-        name: id
-        required: true
-        type: integer
+        - description: ID of the email message
+          in: path
+          name: id
+          required: true
+          type: integer
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Deletion success status
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Bad id
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "500":
           description: Failed to delete email message
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: Delete an email message
-  /api/v1/email/update/{id}:
+  /api/v1/auth/email/update/{id}:
     put:
       consumes:
-      - application/json
+        - application/json
       description: Update an existing email message based on its identifier
       parameters:
-      - description: ID of the email message
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Email message in JSON format
-        in: body
-        name: email
-        required: true
-        schema:
-          $ref: '#/definitions/delivery.Email'
+        - description: ID of the email message
+          in: path
+          name: id
+          required: true
+          type: integer
+        - description: Email message in JSON format
+          in: body
+          name: email
+          required: true
+          schema:
+            $ref: '#/definitions/email.Email'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Update success status
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Bad id or Bad JSON
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "500":
           description: Failed to update email message
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: Update an email message
-  /api/v1/emails:
+  /api/v1/auth/emails:
     get:
       description: Get a list of all email messages
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: List of all email messages
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "404":
           description: DB error
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "500":
           description: JSON encoding error
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: Display the list of email messages
-  /api/v1/get-user:
+  /api/v1/auth/get-user:
     get:
       description: Retrieve the user associated with the current session
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: User details
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/delivery.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: Get user by session
       tags:
-      - users
+        - users
   /api/v1/login:
     post:
       consumes:
-      - application/json
+        - application/json
       description: Handles user login.
       parameters:
-      - description: User credentials for login
-        in: body
-        name: credentials
-        required: true
-        schema:
-          $ref: '#/definitions/delivery.User'
+        - description: User credentials for login
+          in: body
+          name: credentials
+          required: true
+          schema:
+            $ref: '#/definitions/user.User'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Login successful
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Invalid request body
           schema:
-            $ref: '#/definitions/delivery.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "401":
           description: Invalid credentials
           schema:
-            $ref: '#/definitions/delivery.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Failed to create session
           schema:
-            $ref: '#/definitions/delivery.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: User login
       tags:
-      - users
+        - users
   /api/v1/logout:
     post:
       description: Handles user logout.
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Logout successful
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: User logout
       tags:
-      - users
+        - users
   /api/v1/signup:
     post:
       consumes:
-      - application/json
+        - application/json
       description: Handles user signup.
       parameters:
-      - description: New user details for signup
-        in: body
-        name: newUser
-        required: true
-        schema:
-          $ref: '#/definitions/delivery.User'
+        - description: New user details for signup
+          in: body
+          name: newUser
+          required: true
+          schema:
+            $ref: '#/definitions/user.User'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Signup successful
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Invalid request body
           schema:
-            $ref: '#/definitions/delivery.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
         "500":
           description: Failed to add user
           schema:
-            $ref: '#/definitions/delivery.ErrorResponse'
+            $ref: '#/definitions/handlers.ErrorResponse'
       summary: User signup
       tags:
-      - users
-  /api/v1/verify-auth:
+        - users
+  /api/v1/auth/verify-auth:
     get:
       description: Verify user authentication using sessions
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
         "401":
           description: Not Authorized
           schema:
-            $ref: '#/definitions/delivery.Response'
+            $ref: '#/definitions/handlers.Response'
       summary: Verify user authentication
       tags:
-      - users
+        - users
 swagger: "2.0"
